Bug tracker at http://code.google.com/p/psutil/issues

0.3.1 - XXXX-XX-XX
------------------

NEW FEATURES

 * Issue 150: network I/O counters. (OSX patch by Jeremy Whitlock)
 * Issue 198: Process.wait(timeout=0) can now be used to make wait() return
   immediately.
 * Issue 206: disk I/O counters. (OSX patch by Jeremy Whitlock)

BUGFIXES

 * Issue 135: (OS X) psutil cannot create Process object
 * Issue 144: (Linux) no longer support 0 special PID.
 * Issue 188: (Linux) psutil import error on Linux ARM architectures.
 * Issue 197: (Linux) Process.get_connections() is broken on platforms not
   supporting IPv6.
 * Issue 200: (Linux) psutil.NUM_CPUS not working on armel and sparc
   architectures and causing crash on module import.
 * Issue 201: (Linux) Process.get_connections() is broken on big-endian
   architectures.
 * Issue 211: Process instance can unexpectedly raise NoSuchProcess if tested
   for equality with another object.


0.3.0 - 2011-07-08
------------------

NEW FEATURES

 * Issue 125: system per-cpu percentage utilization and times.
 * Issue 163: per-process associated terminal (TTY).
 * Issue 171: added get_phymem() and get_virtmem() functions returning system
   memory information (total, used, free) and memory percent usage.
   total_* avail_* and used_* memory functions are deprecated.
 * Issue 172: disk usage statistics.
 * Issue 174: mounted disk partitions.
 * Issue 179: setuptools is now used in setup.py

BUGFIXES

 * Issue 159: SetSeDebug() does not close handles or unset impersonation on
   return.
 * Issue 164: wait function raises a TimeoutException when a process returns
   -1 (Windows).
 * Issue 165: process.status raises an unhandled exception.
 * Issue 166: get_memory_info() leaks handles hogging system resources.
 * Issue 168: psutil.cpu_percent() returns erroneous results when used in
   non-blocking mode.  (patch by Philip Roberts)
 * Issue 178: OSX - Process.get_threads() leaks memory